<!--
  ~ Copyright (C) 2021 Kavin Raju S
  ~ Licensed under the Zero Noncommercial Public License v1.0
  ~
  ~
  -->

<resources>
    <string name="app_name">Icon Finder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="icons">Icons</string>
    <string name="icon_set">Icon Set</string>
    <string name="tab_1_icon_set">@string/icon_set</string>
    <string name="tab_2_icons">@string/icons</string>
    <string name="sample_string_foods">Foods</string>
    <string name="sample_string_price_20">$20</string>
    <string name="type">Type:</string>
    <string name="sample_string_fill">Fill</string>
    <string name="sample_string_james_wan">James Wan</string>
    <string name="license_type">License Type:</string>
    <string name="sample_string_creative_commons_license">Creative Commons License</string>
    <string name="this_is_the_subscription_type_premium_or_free">This is the subscription type - premium or free</string>
    <string name="icon">Icon</string>
    <string name="sample_string_Burger">Burger</string>
    <string name="sample_string_png_svg">png, svg</string>
    <string name="no_attribution">No Attribution</string>
    <string name="download">Download</string>
    <string name="retry">Retry</string>
    <string name="no_data">No data!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="select">Select</string>
    <string name="premium">Premium</string>
    <string name="free">Free</string>
    <string name="sample_string_website_url">www.icon7.com</string>
    <string name="info">Info:</string>
    <string name="sample_string_info">"At vero eos et accusamus et iusto odi dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atq ue corrupti quos dolores et quas mol estias excepturi sint occaecati cupidi. praesentium voluptatum deleniti atq ue corrupti quos dolores et quas mol. "</string>
    <string name="title_activity_details">Details</string>
    <string name="home">Home</string>
    <string name="url">URL:</string>
    <string name="creator_name">Creator Name:</string>
    <string name="sorry_no_data_available">Sorry, No data available!</string>
    <string name="search_option_is_not_available_now">Search option is not available now.</string>
    <string name="storage_permission_not_available">Storage permission not available</string>
</resources>