<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card_view_icons_outer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_4dp"
        app:cardCornerRadius="@dimen/card_radius_icons_outer"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_bg_color"
            android:paddingStart="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingEnd="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_8dp">

            <ImageView
                android:id="@+id/iv_icons_premium_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/this_is_the_subscription_type_premium_or_free"
                android:elevation="@dimen/dimen_2dp"
                app:layout_constraintBottom_toTopOf="@id/material_card_view_icons_inner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/material_card_view_icons_inner"
                app:srcCompat="@drawable/icon_premium" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/material_card_view_icons_inner"
                android:layout_width="@dimen/card_width_material_card_view_icons_inner"
                android:layout_height="@dimen/card_height_material_card_view_icons_inner"
                android:layout_margin="@dimen/dimen_16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_radius_icons_inner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_icons_icon"
                    android:layout_width="@dimen/dimen_56dp"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_free" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_icons_download"
                style="@style/Widget.App.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:background="@color/button_color"
                android:text="@string/download"
                android:textAllCaps="false"
                app:icon="@drawable/icon_download"
                app:layout_constraintEnd_toEndOf="@id/material_card_view_icons_inner"
                app:layout_constraintStart_toStartOf="@id/material_card_view_icons_inner"
                app:layout_constraintTop_toBottomOf="@id/material_card_view_icons_inner" />

            <TextView
                android:id="@+id/tv_icons_icon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sample_string_Burger"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/material_card_view_icons_inner"
                app:layout_constraintStart_toStartOf="@id/material_card_view_icons_inner"
                app:layout_constraintTop_toBottomOf="@id/btn_icons_download" />

            <TextView
                android:id="@+id/tv_icons_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/type"
                android:textColor="@color/text_color"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintStart_toStartOf="@id/material_card_view_icons_inner"
                app:layout_constraintTop_toBottomOf="@id/tv_icons_icon_name" />

            <TextView
                android:id="@+id/tv_icons_type"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:layout_marginEnd="@dimen/dimen_4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sample_string_png_svg"
                android:textColor="@color/text_color"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_icons_type_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_icons_type_title" />

            <TextView
                android:id="@+id/tv_icons_attribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/no_attribution"
                android:textColor="@color/text_color"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintStart_toStartOf="@id/material_card_view_icons_inner"
                app:layout_constraintTop_toBottomOf="@id/tv_icons_type" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/image_button_icons_info"
                android:layout_width="@dimen/dimen_13dp"
                android:layout_height="@dimen/dimen_13dp"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:src="@drawable/icon_info"
                app:layout_constraintBottom_toBottomOf="@id/tv_icons_attribution"
                app:layout_constraintStart_toEndOf="@id/tv_icons_attribution"
                app:layout_constraintTop_toTopOf="@id/tv_icons_attribution" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>